# Selflearning

./: README.md
8-25-25/: CMakeLists.txt
8-25-25/includes/: linked_list.hpp  node.hpp
8-25-25/src/: main.cpp
Learning about filters/: Assignment.docx
Learning about filters/Q1/: test_code_run.m  test_sine.m
Learning about filters/Q2/: butter_7deg.m  chevy1_7deg.m  elliptic.m
Learning about filters/Q3/: chevy_7deg.m
Learning about filters/Q4/: fir_filter.asv  fir_filter.m  myfrf.m  remez_frf_example_2a.m
Learning about filters/Q5/: q5_fir_filter.m
Learning about filters/Q6/: q6_fir_filter.m
Learning about filters/Q7/: q7a_fir_filter.m  q7b_fir_filter.m
Learning about filters/Q8/: elliptic_5deg.m  example_nyq_sqrt.m  example_sqrt_nyq_y2.m  inverse_chevy_7deg.asv  inverse_chevy_7deg.m  qpsk.m  remez_fir_25tap.asv  remez_fir_25tap.m  remez_fir_31.m  scratch.m  sqrt_nyq_y2.asv  sqrt_nyq_y2.m
